Introduce new enhancements for the element:
 * more demo examples
 * cover code with the documentation
 * buttons are aware about whether their items are in the cart

--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "authors": [
     "Dmitriy Nesteryuk <dmitriy.nesteryuk@gmail.com>"
   ],
-  "description": "An element providing a common logic for building a shopping cart",
+  "description": "An element providing a logic for building a shopping cart",
   "keywords": [
     "web-component",
     "polymer",
@@ -24,6 +24,7 @@
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
     "web-component-tester": "^4.0.0",
-    "numbro-element": "~1.0.4"
+    "numbro-element": "^1.0.4",
+    "bootstrap": "^3.3.6"
   }
 }
